# python-sara

./: .gitignore  README.md  pyproject.toml  settings.toml
migrations/: alembic.ini
migrations/versions/: 20210819150211_add_config_settings.py
sara/: Kernel.py  flask.py
sara/Console/: __init__.py
sara/Entity/: Setting.py  __init__.py
