[tool.poetry]
name = "sara"
version = "0.1.0"
description = "Synchronization and Reporting Architecuture"
authors = ["David Lundgren <dlundgren@syberisle.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
dynaconf = "^3.1.4"
python-dotenv = "^0.19.0"
pymssql = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sara = "sara.flask:cli"